--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,16 @@
         run: pip install -r requirements.txt
       - name: Run tests
         run: python manage.py test
+      - name: Git bisect start
+        run: |
+          git bisect start
+          git bisect bad c1a4be04b972b6c17db242fc37752ad517c29402
+          git bisect good e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c
+
+      - name: Git bisect test
+        run: |
+          git bisect run ./run_tests.sh
+
+      - name: Git bisect reset
+        run: |
+          git bisect reset
